--- a/echoes/package.json
+++ b/echoes/package.json
@@ -8,11 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "axios": "^1.8.2",
     "bootstrap": "^5.3.3",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "font-awesome": "^4.7.0",
     "vue": "^3.2.13",
     "vue-router": "^4.5.0",
     "vuex": "^4.0.2"
